fixed test and compilation error